--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -1,7 +1,8 @@
 EditCampaignScreen As screen:
     OnVisible: |-
-        =UpdateContext({isDeleteVisible :false, isSendVisible: false});
+        =UpdateContext({isDeleteVisible: false, isSendVisible: false, isRecepientPreviewVisible: false});
         Set(varBase64Only, Blank());
+        Collect(TempResipientList, {'Role Primary Contact': "janis.rasins", Title: "Business 1"})
 
     Container8 As groupContainer.horizontalAutoLayoutContainer:
         Height: =40
@@ -559,7 +560,7 @@ EditCampaignScreen As screen:
             ZIndex: =7
 
     Container9 As groupContainer:
-        Fill: =RGBA(0, 0, 0, 0.9)
+        Fill: =RGBA(0, 0, 0, 0.8)
         Height: =768
         Visible: =isSendVisible
         Width: =1366
@@ -614,4 +615,45 @@ EditCampaignScreen As screen:
             X: =520
             Y: =213
             ZIndex: =4
+
+    Container10 As groupContainer.manualLayoutContainer:
+        Fill: =RGBA(0, 0, 0, 0.8)
+        Height: =Parent.Height
+        Visible: =isRecepientPreviewVisible
+        Width: =Parent.Width
+        ZIndex: =17
+
+        Container11 As groupContainer.manualLayoutContainer:
+            Fill: =RGBA(255, 255, 255, 1)
+            Height: =Parent.Height - 80
+            Width: =Parent.Width - 80
+            X: =40
+            Y: =40
+            ZIndex: =1
+
+            TempRecipientGallery As gallery.galleryHorizontal:
+                Height: =Parent.Height - 40
+                Items: =TempResipientList
+                TemplatePadding: =10
+                TemplateSize: =If(Self.Layout = Layout.Horizontal, Min(320, Self.Width - 60), Min(320, Self.Height - 60))
+                Width: =Parent.Width - 40
+                WrapCount: =6
+                X: =20
+                Y: =20
+                ZIndex: =1
+
+                TempTitle As label:
+                    OnSelect: =Select(Parent)
+                    Text: |-
+                        ="Role title: " & ThisItem.'Role Primary Contact'
+                    Width: =Parent.TemplateWidth
+                    Y: =TempEmail.Height
+                    ZIndex: =1
+
+                TempEmail As label:
+                    OnSelect: =Select(Parent)
+                    Text: |-
+                        ="Email: " & ThisItem.'Role Primary Contact'
+                    Width: =Parent.TemplateWidth
+                    ZIndex: =2
 
