--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -1,7 +1,6 @@
 EditCampaignScreen As screen:
     OnVisible: |-
         =UpdateContext({isDeleteVisible: false, isSendVisible: false, isRecepientPreviewVisible: false});
-        Set(varBase64Only, Blank());
         Clear(PreviewResipientList);
 
     Container8 As groupContainer.horizontalAutoLayoutContainer:
@@ -286,10 +285,10 @@ EditCampaignScreen As screen:
 
             Button2 As button:
                 BorderThickness: =0
-                DisplayMode: =If(IsBlank(PreviewResipientList), DisplayMode.Disabled, DisplayMode.Edit)
+                DisplayMode: =If(CountRows(ExistingCampaignGallery.Selected.Attachments), DisplayMode.Edit, DisplayMode.Disabled)
                 Height: =30
                 OnSelect: |-
-                    =If(IsBlank(PreviewResipientList), Collect(PreviewResipientList, ExcelPreview.Run(ExistingCampaignGallery.Selected.ID)));
+                    =If(!CountRows(PreviewResipientList), Collect(PreviewResipientList, ExcelPreview.Run(ExistingCampaignGallery.Selected.ID)));
                     UpdateContext({isRecepientPreviewVisible: true});
                 RadiusBottomLeft: =0
                 RadiusBottomRight: =0
@@ -653,35 +652,42 @@ EditCampaignScreen As screen:
             Y: =40
             ZIndex: =1
 
-            TempRecipientGallery As gallery.galleryHorizontal:
-                FocusedBorderThickness: =0
-                Height: =Parent.Height - 70
+            PreviewRecipientGallery As gallery.galleryVertical:
+                Height: =Parent.Height - 50
                 Items: =PreviewResipientList
-                TemplatePadding: =10
-                TemplateSize: =350
+                Layout: =Layout.Vertical
+                TemplateSize: =Container12.Height + 10
                 Width: =Parent.Width - 40
-                WrapCount: =6
-                X: =20
-                Y: =20
+                WrapCount: =5
+                X: =5
+                Y: =45
                 ZIndex: =1
 
                 Container12 As groupContainer:
                     Height: =TempContact.Height + TempTitle.Height
-                    Width: =Parent.TemplateWidth
-                    ZIndex: =3
+                    Width: =Parent.Width / 5 - 10
+                    Y: =40
+                    ZIndex: =1
+
+                    Rectangle1 As rectangle:
+                        Fill: =RGBA(0, 0, 0, 1)
+                        Height: =1
+                        Width: =Parent.Width - 5
+                        Y: =Parent.Height - 1
+                        ZIndex: =1
 
                     TempTitle As label:
                         Text: |-
                             ="Role title: " & ThisItem.Title
                         Width: =Parent.Width
                         Y: =TempContact.Height
-                        ZIndex: =1
+                        ZIndex: =2
 
                     TempContact As label:
                         Text: |-
                             ="Contact: " & ThisItem.Contact
                         Width: =Parent.Width
-                        ZIndex: =2
+                        ZIndex: =3
 
             Icon7 As icon.Cancel:
                 Height: =48
