--- a/app/Src/ImportExcelDataScreen.fx.yaml
+++ b/app/Src/ImportExcelDataScreen.fx.yaml
@@ -20,7 +20,7 @@ ImportExcelDataScreen As screen:
             =Set(varResponse, Blank());
             Set(varAttachment, JSON(DataBase64.Image, JSONFormat.IncludeBinaryData));
             Set(varBase64Only, Mid(varAttachment, Find(",", varAttachment)+1, Len(varAttachment)-Find(",", varAttachment) - 1));
-            Set(varResponse, ExcelUpload.Run(Last(AttachmentControl_1.Attachments).Name, varBase64Only).status);
+            //Set(varResponse, ExcelUpload.Run(Last(AttachmentControl_1.Attachments).Name, varBase64Only).status);
             Reset(AttachmentControl_1);
             If(!IsBlank(varResponse), Refresh(RecipientsList));
             Set(varAttachment, Blank());
