--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -7,7 +7,7 @@ EditCampaignScreen As screen:
         Height: =40
         LayoutGap: =40
         LayoutMode: =LayoutMode.Auto
-        Width: =1076
+        Width: =1117
         X: =227
         Y: =681
         ZIndex: =1
@@ -27,7 +27,9 @@ EditCampaignScreen As screen:
 
         Button12_5 As button:
             FillPortions: =1
-            OnSelect: =Navigate(PreviewCampaignScreen);
+            OnSelect: |-
+                =SubmitForm(EditCampaignForm);
+                Navigate(PreviewCampaignScreen);
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
             RadiusTopLeft: =0
@@ -39,8 +41,7 @@ EditCampaignScreen As screen:
 
         Button12 As button:
             FillPortions: =1
-            OnSelect: |
-                =SubmitForm(EditCampaignForm);
+            OnSelect: =SubmitForm(EditCampaignForm);
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
             RadiusTopLeft: =0
@@ -66,7 +67,6 @@ EditCampaignScreen As screen:
             ZIndex: =4
 
         Button1 As button:
-            FillPortions: =1
             OnSelect: |-
                 =UpdateContext({isSendVisible: true});
             RadiusBottomLeft: =0
@@ -515,7 +515,7 @@ EditCampaignScreen As screen:
         Text: ="Download Excel template"
         Width: =223
         X: =1121
-        Y: =518
+        Y: =483
         ZIndex: =10
 
     DeletePopup_2 As group:
@@ -698,4 +698,16 @@ EditCampaignScreen As screen:
                 X: =Parent.Width - Self.Width - 5
                 Y: =5
                 ZIndex: =2
+
+    Button3 As button:
+        Fill: =RGBA(109, 49, 162, 1)
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Sent test to me"
+        Width: =223
+        X: =1121
+        Y: =598
+        ZIndex: =18
 
