--- a/app/Src/CampaignScreen.fx.yaml
+++ b/app/Src/CampaignScreen.fx.yaml
@@ -36,9 +36,10 @@ CampaignScreen As screen:
             PaddingLeft: =0
             PaddingRight: =0
             PaddingTop: =0
+            Size: =15
             Text: = Text(ThisItem.Created,"dd-mmm-yyyy")
             VerticalAlign: =VerticalAlign.Top
-            Width: =Parent.TemplateWidth - 104
+            Width: =Parent.TemplateWidth / 2 - 104
             X: =32
             Y: =Title2.Y + Title2.Height + 2
             ZIndex: =2
@@ -82,6 +83,38 @@ CampaignScreen As screen:
             Width: =Parent.TemplateWidth
             Y: =Parent.TemplateHeight - 1
             ZIndex: =5
+
+        ContactsCount As label:
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Size: =15
+            Text: |-
+                = "Total contacts: " & ThisItem.Countofcontacts
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth / 2 - 104
+            X: =Subtitle3.X + Subtitle3.Width + 15
+            Y: =Title2.Y + Title2.Height + 2
+            ZIndex: =6
+
+        Subtitle3_1 As label:
+            FontWeight: =FontWeight.Bold
+            Height: =Self.Size * 1.8
+            OnSelect: =Select(Parent)
+            PaddingBottom: =0
+            PaddingLeft: =0
+            PaddingRight: =0
+            PaddingTop: =0
+            Size: =15
+            Text: =If(ThisItem.IsSent > 0, "Campaign was sent", "Draft")
+            VerticalAlign: =VerticalAlign.Top
+            Width: =Parent.TemplateWidth / 2 - 104
+            X: =32
+            Y: =Subtitle3.Y + Subtitle3.Height + 2
+            ZIndex: =7
 
     Icon3_2 As icon.Reload:
         Color: =RGBA(56, 96, 178, 1)
