--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -618,6 +618,7 @@ EditCampaignScreen As screen:
             Height: =44
             OnSelect: |-
                 =SendEmailFlow.Run(ExistingCampaignGallery.Selected.ID, varCurrentUser.Email);
+                Patch(NewCampaign, LookUp(NewCampaign, ID = ExistingCampaignGallery.Selected.ID), {IsSent:1});
                 UpdateContext({isSendVisible:false}); 
             RadiusBottomLeft: =0
             RadiusBottomRight: =0
