--- a/app/Src/EditCampaignScreen.fx.yaml
+++ b/app/Src/EditCampaignScreen.fx.yaml
@@ -3,6 +3,19 @@ EditCampaignScreen As screen:
         =UpdateContext({isDeleteVisible: false, isSendVisible: false, isRecepientPreviewVisible: false});
         Clear(PreviewResipientList);
 
+    Button3 As button:
+        Fill: =RGBA(109, 49, 162, 1)
+        OnSelect: =SendToSelfFlow.Run(ExistingCampaignGallery.Selected.ID, varCurrentUser.Email);
+        RadiusBottomLeft: =0
+        RadiusBottomRight: =0
+        RadiusTopLeft: =0
+        RadiusTopRight: =0
+        Text: ="Sent test to me"
+        Width: =223
+        X: =1121
+        Y: =598
+        ZIndex: =1
+
     Container8 As groupContainer.horizontalAutoLayoutContainer:
         Height: =40
         LayoutGap: =40
@@ -10,7 +23,7 @@ EditCampaignScreen As screen:
         Width: =1117
         X: =227
         Y: =681
-        ZIndex: =1
+        ZIndex: =2
 
         Button12_1 As button:
             Fill: =RGBA(166, 166, 166, 1)
@@ -87,7 +100,7 @@ EditCampaignScreen As screen:
         Width: =864
         X: =240
         Y: =27
-        ZIndex: =2
+        ZIndex: =3
 
         Template_DataCard2 As typedDataCard.comboBoxEditCard:
             BorderStyle: =BorderStyle.Solid
@@ -444,11 +457,13 @@ EditCampaignScreen As screen:
     Icon5 As icon.BackArrow:
         Height: =48
         Icon: =Icon.BackArrow
-        OnSelect: =ResetForm(EditCampaignForm);Back();
+        OnSelect: |-
+            =ResetForm(EditCampaignForm);
+            Navigate(CampaignScreen);
         Width: =58
         X: =16
         Y: =27
-        ZIndex: =3
+        ZIndex: =4
 
     Container5 As groupContainer.manualLayoutContainer:
         Height: =346
@@ -521,74 +536,12 @@ EditCampaignScreen As screen:
         Y: =483
         ZIndex: =10
 
-    DeletePopup_2 As group:
-        Height: =5
-        Width: =5
-        X: =40
-        Y: =40
-        ZIndex: =15
-
-        Rectangle1_3 As rectangle:
-            Fill: =RGBA(56, 96, 178, 0.7)
-            Height: =338
-            Visible: =isDeleteVisible
-            Width: =897
-            X: =240
-            Y: =90
-            ZIndex: =4
-
-        Button8_3 As button:
-            Fill: =RGBA(0, 134, 208, 1)
-            Height: =44
-            OnSelect: |-
-                =UpdateContext({varShowPopup:false}); Navigate(CampaignScreen);
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: ="Cancel"
-            Visible: =isDeleteVisible
-            Width: =198
-            X: =704
-            Y: =338
-            ZIndex: =5
-
-        DeleteButton7_3 As button:
-            Fill: =RGBA(0, 134, 208, 1)
-            Height: =44
-            OnSelect: |-
-                =UpdateContext({varShowPopup:false}); 
-                Remove([@NewCampaign], ExistingCampaignGallery.Selected); 
-                If (IsEmpty(Errors([@NewCampaign], ExistingCampaignGallery.Selected)), Back());
-            RadiusBottomLeft: =0
-            RadiusBottomRight: =0
-            RadiusTopLeft: =0
-            RadiusTopRight: =0
-            Text: ="Delete"
-            Visible: =isDeleteVisible
-            Width: =198
-            X: =456
-            Y: =338
-            ZIndex: =6
-
-        Label8_2 As label:
-            Align: =Align.Center
-            Color: =RGBA(255, 255, 255, 1)
-            Height: =108
-            Size: =15
-            Text: ="Are you sure you want to delete the campaign?"
-            Visible: =isDeleteVisible
-            Width: =385
-            X: =490
-            Y: =173
-            ZIndex: =7
-
     Container9 As groupContainer:
         Fill: =RGBA(0, 0, 0, 0.8)
         Height: =768
         Visible: =isSendVisible
         Width: =1366
-        ZIndex: =16
+        ZIndex: =11
 
         Rectangle1_5 As rectangle:
             Fill: =RGBA(255, 255, 255, 1)
@@ -646,7 +599,7 @@ EditCampaignScreen As screen:
         Height: =Parent.Height
         Visible: =isRecepientPreviewVisible
         Width: =Parent.Width
-        ZIndex: =17
+        ZIndex: =12
 
         Container11 As groupContainer.manualLayoutContainer:
             Fill: =RGBA(255, 255, 255, 1)
@@ -662,14 +615,14 @@ EditCampaignScreen As screen:
                 Layout: =Layout.Vertical
                 TemplateSize: =Container12.Height + 10
                 Width: =Parent.Width - 40
-                WrapCount: =5
+                WrapCount: =4
                 X: =5
                 Y: =45
                 ZIndex: =1
 
                 Container12 As groupContainer:
-                    Height: =TempContact.Height + TempTitle.Height
-                    Width: =Parent.Width / 5 - 10
+                    Height: =TempContact.Height + TempTitle.Height + 10
+                    Width: =Parent.TemplateWidth
                     Y: =40
                     ZIndex: =1
 
@@ -681,13 +634,16 @@ EditCampaignScreen As screen:
                         ZIndex: =1
 
                     TempTitle As label:
+                        Height: =50
                         Text: |-
                             ="Role title: " & ThisItem.Title
+                        VerticalAlign: =VerticalAlign.Top
                         Width: =Parent.Width
                         Y: =TempContact.Height
                         ZIndex: =2
 
                     TempContact As label:
+                        AutoHeight: =true
                         Text: |-
                             ="Contact: " & ThisItem.Contact
                         Width: =Parent.Width
@@ -703,16 +659,65 @@ EditCampaignScreen As screen:
                 Y: =5
                 ZIndex: =2
 
-    Button3 As button:
-        Fill: =RGBA(109, 49, 162, 1)
-        OnSelect: =SendToSelfFlow.Run(ExistingCampaignGallery.Selected.ID, varCurrentUser.Email);
-        RadiusBottomLeft: =0
-        RadiusBottomRight: =0
-        RadiusTopLeft: =0
-        RadiusTopRight: =0
-        Text: ="Sent test to me"
-        Width: =223
-        X: =1121
-        Y: =598
-        ZIndex: =18
+    DeletePopup_2 As group:
+        Height: =5
+        Width: =5
+        X: =40
+        Y: =40
+        ZIndex: =15
+
+        Rectangle1_3 As rectangle:
+            Fill: =RGBA(56, 96, 178, 0.7)
+            Height: =338
+            Visible: =isDeleteVisible
+            Width: =897
+            X: =240
+            Y: =90
+            ZIndex: =5
+
+        Button8_3 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); Navigate(CampaignScreen);
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Cancel"
+            Visible: =isDeleteVisible
+            Width: =198
+            X: =704
+            Y: =338
+            ZIndex: =6
+
+        DeleteButton7_3 As button:
+            Fill: =RGBA(0, 134, 208, 1)
+            Height: =44
+            OnSelect: |-
+                =UpdateContext({varShowPopup:false}); 
+                Remove([@NewCampaign], ExistingCampaignGallery.Selected); 
+                If (IsEmpty(Errors([@NewCampaign], ExistingCampaignGallery.Selected)), Back());
+            RadiusBottomLeft: =0
+            RadiusBottomRight: =0
+            RadiusTopLeft: =0
+            RadiusTopRight: =0
+            Text: ="Delete"
+            Visible: =isDeleteVisible
+            Width: =198
+            X: =456
+            Y: =338
+            ZIndex: =7
+
+        Label8_2 As label:
+            Align: =Align.Center
+            Color: =RGBA(255, 255, 255, 1)
+            Height: =108
+            Size: =15
+            Text: ="Are you sure you want to delete the campaign?"
+            Visible: =isDeleteVisible
+            Width: =385
+            X: =490
+            Y: =173
+            ZIndex: =8
 
