--- a/app/Src/CampaignScreen.fx.yaml
+++ b/app/Src/CampaignScreen.fx.yaml
@@ -99,6 +99,7 @@ CampaignScreen As screen:
             Icon: =Icon.ChevronRight
             OnSelect: |-
                 =Select(Parent);
+                Set(varCurrentCampaign, ExistingCampaignGallery.Selected);
                 Navigate(EditCampaignScreen);
             PaddingBottom: =10
             PaddingLeft: =10
